--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "homebridge-platform-insteonlocal-config-generator",
+  "name": "insteon-discovery",
   "version": "1.0.0",
-  "description": "A tool that will automatically populate the homebridge config for the homebridge-insteon-local plugion",
-  "main": "index.js",
-  "bin": {
-    "insteonlocal-config-generator": "index.js"
-  },
+  "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "prestart": "npm run build",
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ssyrell/homebridge-platform-insteonlocal-config-generator.git"
-  },
-  "author": "Steve Syrell",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ssyrell/homebridge-platform-insteonlocal-config-generator/issues"
-  },
-  "homepage": "https://github.com/ssyrell/homebridge-platform-insteonlocal-config-generator#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "chalk": "^4.1.0",
-    "dotenv": "^8.2.0",
-    "esm": "^3.2.25",
-    "minimist": "^1.2.5"
+    "querystring": "^0.2.1"
+  },
+  "devDependencies": {
+    "@azure/functions": "^1.2.3",
+    "@types/node": "^14.14.37",
+    "typescript": "^4.0.0"
   }
 }
